--- a/nook-project/package.json
+++ b/nook-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "@supabase-js/source": "github:supabase/supabase-js",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/vite": "^4.1.14",
     "lucide-react": "^0.545.0",
